remove default license

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "accounting","api","amatino","double entry"
   ],
   "author": "hugh@blinkybeach.com",
-  "license": "ISC",
+  "license": "",
   "bugs": {
     "url": "https://github.com/Amatino-Code/amatino-js/issues"
   },
