index new classes

--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "double entry accounting",
     "accounting library",
     "amatino javascript",
-    "amatino npm"
+    "amatino npm",
+    "financial",
+    "financial database",
+    "finance",
+    "finance database"
   ],
   "author": "hugh@amatino.io",
   "license": "MIT",
